webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/01-particles/select.css
/**
 * Type: Atom.
 * Select.
 */

.select {
  display: block;
  width: 100%;
  height: 40px;
  padding: 0 40px 0 15px;
  color: #333;
  font-size: var(--base-font-size);
  font-family: var(--base-font-family);
  line-height: 1;
  vertical-align: bottom;
  background-color: #fff;

  /* Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214 */
  background-image: none;
  border: 1px solid #c0c0c0;
  border-radius: 0;

  &:focus {
    outline: 0;
  }
}


.premium-dropdown {
  &--wrapper {
    position: relative;
    z-index: 1;
    display: flex;
    flex-direction: column;
  }

  &--trigger {
    position: relative;
    display: block;
    align-items: center;
    min-width: 175px;
    min-height: var(--button-height);
    padding: 16px 48px 14px 24px;
    overflow: hidden;
    color: currentcolor;
    font-weight: var(--button-font-weight);
    font-size: var(--base-font-size-small);
    font-family: var(--base-font-family);
    line-height: calc(var(--button-height) * .5);
    text-decoration: none;
    background-color: var(--color-white);
    border: 1px solid #c0c0c0;
    cursor: pointer;

    &:hover {
      text-decoration: none;
    }

    &--disabled {
      width: 100%;
      background-color: var(--color-gray-light);
      border: none;
      cursor: auto;
    }

    .icon {
      position: absolute;
      top: 50%;
      right: 24px;
      width: 14px;
      height: 8px;
      transform: translateY(-50%);
      transition: all .3s;
    }

    &.is-selected {
      .icon {
        transform: rotate(180deg) translateY(50%);
      }
    }
  }

  &--menu {
    position: absolute;
    top: 100%;
    left: 0;
    display: none;
    min-width: 100%;
    margin-top: -1px;
    overflow: hidden;
    background-color: var(--color-white);
    border: 1px solid #c0c0c0;
    opacity: 0;

    &.expanded {
      display: block;
      opacity: 1;
    }

    &-item {
      display: block;
      width: 100%;
      min-height: var(--button-height);
      padding: 16px 24px 14px;
      font-size: var(--base-font-size-small);
      line-height: calc(var(--button-height) * .5);
      text-decoration: none;
      background-color: #fff;
      border-top: 1px solid #c0c0c0;
      cursor: pointer;

      &:hover {
        background-color: var(--color-pink);
        text-decoration: none;
      }

      &.is-active {
        background-color: var(--color-pink-light);

        &:hover {
          background-color: var(--color-pink);
        }
      }

      &:first-child {
        border-top: 0;
      }
    }
  }
}

.field--widget-options-select {
  position: relative;
  z-index: 4;
}

.js-form-type-select {
  position: relative;
  z-index: 3;
}

